--- a/public/karusell.css
+++ b/public/karusell.css
@@ -14,7 +14,7 @@
     text-align:center;
     color:#fff;
     position:relative;
-    
+    margin-bottom: 15px;
 }
 
 .box16 .box-content,.box16:after {
