--- a/public/kontakt.css
+++ b/public/kontakt.css
@@ -14,3 +14,16 @@ h2 {
 .nuppKontakt {
     width: 350px;
 }
+
+.registreerimisPilt {
+    width: 100%
+}
+
+.paiskonteiner2 {
+    height: 200px;
+}
+
+.registreeruMatkale {
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
