--- a/views/pages/matkainfo.ejs
+++ b/views/pages/matkainfo.ejs
@@ -9,14 +9,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="matkaklubi.css">
+    <link rel="stylesheet" href="/matkaklubi.css">
     <link rel="stylesheet" href="/karusell.css">
     <link rel="stylesheet" href="/kontakt.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet"> 
 </head>
 <body>
-    <div class="paiskonteiner">
+    <div class="paiskonteiner paiskonteiner2">
         <div class="container">
             <div class="row paiserida">
                 <div class="pais-logoala">
@@ -45,33 +45,78 @@
                         </div>  
                       </nav>
             </div>
-        
-            <div class="kirjuta">
-                
-                <h2>Registreeru matkale</h2>
-                <h2>Matk  <%= matk.nimetus %>  </h2>
-                <div>
-                  Matkaindeks: <%= matkaIndeks %>
-                </div>
-                <div class="sisend">
-
-                  <div class="form-group">
-                    <label for="nimi">Nimi:</label>
-                    <input type="text" class="form-control" id="nimi">
-                  </div>
-                  <div class="form-group">
-                    <label for="email">E-mail:</label>
-                    <input type="email" class="form-control" id="email">
-                  </div>
-                  <div class="form-group">
-                    <label for="comment">Märkus:</label>
-                    <textarea class="form-control" rows="5" id="markus"></textarea>
-                  </div>
-                  <button type="submit" onclick="saada()" class="nuppKontakt mt-2 btn btn-dark">Saada</button>
-                </div>
-            </div>
     </div>
   </div>
+
+  <div class="container registreeruMatkale">
+    <div class="row">
+      <div class="kirjuta col-md-6">
+          <h2>Registreeru matkale</h2>
+          <br>
+          <div>
+          </div>
+          <div class="sisend">
+
+            <div class="form-group">
+              <label for="nimi">Nimi:</label>
+              <input type="text" class="form-control" id="nimi">
+            </div>
+            <div class="form-group">
+              <label for="email">E-mail:</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+              <label for="comment">Märkus:</label>
+              <textarea class="form-control" rows="5" id="markus"></textarea>
+            </div>
+            <button type="submit" onclick="saada()" class="nuppKontakt mt-2 btn btn-dark">Registreeru</button>
+          </div>
+      </div>
+    <div class="kirjuta col-md-6">
+      
+      <img class="registreerimisPilt" src="<%= matk.piltUrl %>"/>
+      <h2> <%= matk.nimetus %>  </h2>
+      <p> <%= matk.kuupaev %>  </p>
+      <p> <%= matk.kirjeldus %>  </p>
+      <p>Registreerunuid: <%= matk.registreerunud.length %></p>
+      <p>Vabu kohti: <%=matk.osalejaid-matk.registreerunud.length %></p>  <!--JS failis vabuKohti funktsioon, kuidas siin kuvada?-->
+
+    </div>
+      </div>
+  </div>
+
+
+  <footer class="jumbotron jumbotron-fluid jalus">
+    <div class="container footer">
+      <div class="row">
+        <div class="footer-logo col-md-4">
+          <div class="logo2"></div>
+          <h2>Puhas <br> higi</h2>
+        </div>
+        <nav class="navbar  ml-auto navbar-expand-lg navbar-light bg-light">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="#">Avaleht</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Matkad</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Meist</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Kontakt</a>
+              </li>    
+            </ul>
+          </div>  
+        </nav>
+      </div>
+    </div>
+  </footer>
 
 <script src="/kontakt.js"></script>
 </body>
