regamise kinnitamise vorm

--- a/views/pages/kontakt.ejs
+++ b/views/pages/kontakt.ejs
@@ -64,7 +64,7 @@
             </div>
     </div>
   </div>
-
+  <%- include ("../partials/footer.ejs") %>
 <script src="./kontakt.js"></script>
 </body>
 </html>
