--- a/views/pages/esileht.ejs
+++ b/views/pages/esileht.ejs
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Matkaklubi</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Matkaklubi</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="matkaklubi.css">
-    <link rel="stylesheet" href="./karusell.css">
+    <link rel="stylesheet" href="/karusell.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">    
 </head>
 <body>
   <div class="paiskonteiner">
-        <div class="container">
-            <div class="row paiserida">
-                <a href="#" class="pais-logoala"> <!--suunata teisele lehele ja jooned alt ära-->
-                    <div class="pais-logo"></div>
-                    <div class="pais-nimi">puhas higi</div>
-                </a>                    
-                    <nav class="navbar-nav ml-auto navbar-expand-md navbar-light bg-light">
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                          <ul class="navbar-nav">
-                            <li class="nav-item">
-                              <a class="nav-link" href="http://wpkonsult.ee/oppurid/veeb76/matkaklubi">Avaleht</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="http://wpkonsult.ee/oppurid/veeb76/matkaklubi/uudised.html">Uudised</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="http://wpkonsult.ee/oppurid/veeb76/matkaklubi/kontakt.html">Kontakt</a>
-                            </li>    
-                          </ul>
-                        </div>  
-                      </nav>
+    <div class="container">
+        <div class="row paiserida">
+              <a href="#" class="pais-logoala"> <!--suunata teisele lehele ja jooned alt ära-->
+                <div class="pais-logo"></div>
+                <div class="pais-nimi">puhas higi</div>
+              </a>                 
+                <nav class="navbar-nav ml-auto navbar-expand-md navbar-light bg-light">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                      <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                      <ul class="navbar-nav">
+                        <li class="nav-item">
+                          <a class="nav-link" href="#">Avaleht</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="http://wpkonsult.ee/oppurid/veeb76/matkaklubi/uudised.html">Uudised</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://wpkonsult.ee/oppurid/veeb76/matkaklubi/kontakt.html">Kontakt</a>
+                        </li>    
+                      </ul>
+                    </div>  
+                  </nav>
+        </div>
+    
+        <div class="row pealkiri">
+        <div class="col-md-6 pealkiri-tekstid">
+            <img class="liblikasUks"src="./pildid/liblikas2.png" alt="">
+            <img class="liblikasKaks"src="./pildid/liblikas1.png" alt="">
+          <div class="rida1">
+                <h2>
+                    Matkaklubi
+                </h2>
             </div>
-        
-            <div class="row pealkiri">
-            <div class="col-md-6 pealkiri-tekstid">
-                <img class="liblikasUks"src="./pildid/liblikas2.png" alt="">
-                <img class="liblikasKaks"src="./pildid/liblikas1.png" alt="">
-              <div class="rida1">
-                    <h2>
-                        Matkaklubi
-                    </h2>
-                </div>
-                <div class="rida2">
-                    <h1>Puhas higi</h1>
-                </div>
-                <div class="rida3">
-                    <h3>Tule liiguta ennast koos meiega</h3>
-                </div>
-                <br>
-                <button type="button" class="btn">Vaata kõiki matku</button>  <!-- vaja suunata teisele lehele--->
+            <div class="rida2">
+                <h1>Puhas higi</h1>
             </div>
-            <div class="col-md-6 pealkiri-pilt d-none d-lg-block">
-                <img class="suur-pilt" src="./pildid/matk.png" alt="">
-                <img class="vari" src="./pildid/vari1.png" alt="">
+            <div class="rida3">
+                <h3>Tule liiguta ennast koos meiega</h3>
             </div>
-            </div>
-    </div>
-  </div>
+            <br>
+            <button type="button" class="btn">Vaata tulevaid matku</button>
+        </div>
+        <div class="col-md-6 pealkiri-pilt d-none d-lg-block">
+            <img class="suur-pilt" src="./pildid/matk.png" alt="">
+            <img class="vari" src="./pildid/vari1.png" alt="">
+        </div>
+        </div>
+</div>
+</div>
 
 <div class="container mt-40">
   <h2 class="text-left"> <%=matkad.length %> toimuvat matka</h2>
@@ -78,7 +78,11 @@
   
   <div class="row ">
 
-    <% for (matk of matkad) { %>
+    <%
+    let matk;
+     for (let i = 0; i < matkad.length; i++) { 
+        matk = matkad[i]
+    %>
 
       <div class="col-lg-4 col-sm-12">
           <div class="box16">
@@ -87,7 +91,7 @@
                   <h3 class="title"><%= matk.nimetus %></h3>
                   <span class="post"></span>
                   <ul class="social">
-                    <button type="button" class="btn btn-dark">Registreeru</button> <!--suunata registreerima-->
+                    <a type="button" class="btn btn-dark" href="/matkainfo/<%= i %> ">Registreeru</a> <!--suunata registreerima-->
                   </ul>
               </div>
           </div>
@@ -141,9 +145,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Matkad</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Meist</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#">Kontakt</a>
